# mu

./: .gitignore  Dockerfile  compose.override.yml  compose.yml  pyproject.toml
app/: main.py  pre_start.py  schema.py
app/core/: config.py  db.py
app/graphql/: mutation.py  query.py
app/model/: note.py
app/repository/: note.py
app/routes/: graphql.py
app/service/: note.py
migrations/: env.py
migrations/versions/: 0a198523aebd_initial_migrations.py  1b1471efbb59_initial_migrations.py  717cbca7b94a_base_migrations.py  7fdfd850dc44_initial_migrations.py  8a30e548373d_initial_migrations.py
scripts/: prestart.sh
